<resources>
    <string name="app_name">MOTORCYCLES API</string>
    <string name="btn_alert_dialog">OK</string>
    <string name="default_motorcycle">Search by model…</string>
    <string name="txt_about">About</string>
    <string name="txt_about_description">2024–25\n2ºDAM SEMI\nVÍCTOR LAMAS TURRILLO</string>
    <string name="txt_about_title">PMDM</string>
    <string name="txt_back">Back to list</string>
    <string name="txt_deleted_motorcycle">The motorcycle %1$s has been deleted.</string>
    <string name="txt_desc_delete">Delete the motorcycle</string>
    <string name="txt_desc_motorcycle">Motorcycle image</string>
    <string name="txt_desc_restore">Restore the deleted motorcycle</string>
    <string name="txt_desc_viewed">Motorcycle viewed</string>
    <string name="txt_displacement">Displacement</string>
    <string name="txt_front_tire">Front tire</string>
    <string name="txt_gearbox">Gearbox</string>
    <string name="txt_make_and_model">%1$s %2$s</string>
    <string name="txt_no_browser">The web browser could not be opened.</string>
    <string name="txt_no_connection">No Internet connection.</string>
    <string name="txt_no_data">No motorcycle data.</string>
    <string name="txt_opt_all_motorcycles">ALL</string>
    <string name="txt_opt_bottom_deletes">DELETES</string>
    <string name="txt_opt_bottom_visited">VISITED</string>
    <string name="txt_opt_menu_sort_by_year">Sort by year (0–9)</string>
    <string name="txt_opt_random_model">Random motorcycle</string>
    <string name="txt_opt_sort_by_make">Sort by make (A-Z)</string>
    <string name="txt_opt_sort_by_model">Sort by model (A-Z)</string>
    <string name="txt_power">Power</string>
    <string name="txt_rear_tire">Rear tire</string>
    <string name="txt_total_weight">Total weight</string>
    <string name="txt_torque">Torque</string>
    <string name="txt_type">Type</string>
    <string name="txt_warning_message">There is no deleted motorcycle to display.</string>
    <string name="txt_warning_title">Error</string>
    <string name="txt_year">Year</string>
    <string name="url_google_images">https://www.google.com/search?tbm=isch&amp;q=%s+%s+%s</string>
    <string name="txt_desc_back_arrow">Back arrow</string>
    <string name="txt_desc_downward_arrow">Downward arrow</string>
    <string name="txt_desc_forward_arrow">Forward arrow</string>
    <string name="txt_desc_upward_arrow">Upward arrow</string>
    <string name="txt_desc_no_items">No motorcycles to show.</string>
    <string name="txt_tv_no_items">No motorcycles to show</string>
    <string name="txt_undo">Undo</string>
</resources>