<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mToolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollEffect="compress"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:title="@string/app_name"
            app:titleTextColor="@color/design_default_color_on_primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_motorcycle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbarDetail"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_down"
        android:contentDescription="@string/iv_motorcycle"
        android:src="@drawable/ic_motorcycle"
        tools:src="@drawable/ic_motorcycle" />

    <ImageView
        android:id="@+id/iv_arrow_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_image_search"
        app:layout_constraintTop_toBottomOf="@id/iv_motorcycle"
        app:layout_constraintBottom_toTopOf="@id/tv_make_and_model"
        android:contentDescription="@string/iv_motorcycle"
        android:src="@drawable/ic_arrow_down"
        tools:src="@drawable/ic_arrow_down" />

    <ImageView
        android:id="@+id/iv_image_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_down"
        app:layout_constraintBottom_toTopOf="@id/tv_make_and_model"
        android:contentDescription="@string/iv_motorcycle"
        android:src="@drawable/ic_image_search"
        tools:src="@drawable/ic_image_search" />

    <TextView
        android:id="@+id/tv_make_and_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc_medium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow_down"
        tools:text="MAKE AND MODEL" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_make_and_model"
        android:layout_margin="10dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_year_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:text="@string/txt_year"
                tools:text="year property" />

            <TextView
                android:id="@+id/tv_year_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                tools:text="year data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_type_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/txt_type"
                tools:text="type property" />

            <TextView
                android:id="@+id/tv_type_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="type data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_displacement_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:text="@string/txt_displacement"
                tools:text="Displacement property" />

            <TextView
                android:id="@+id/tv_displacement_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                tools:text="Displacement data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_power_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/txt_power"
                tools:text="power property" />

            <TextView
                android:id="@+id/tv_power_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="power data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_torque_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:text="@string/txt_torque"
                tools:text="torque property" />

            <TextView
                android:id="@+id/tv_torque_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                tools:text="torque data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_gearbox_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/txt_gearbox"
                tools:text="gearbox property" />

            <TextView
                android:id="@+id/tv_gearbox_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="gearbox data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_front_tire_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:text="@string/txt_front_tire"
                tools:text="front tire property" />

            <TextView
                android:id="@+id/tv_front_tire_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                tools:text="front tire data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_rear_tire_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/txt_rear_tire"
                tools:text="rear tire property" />

            <TextView
                android:id="@+id/tv_rear_tire_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="rear tire data" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_total_weight_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:text="@string/txt_total_weight"
                tools:text="total weight property" />

            <TextView
                android:id="@+id/tv_total_weight_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc_medium"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                tools:text="total weight data" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>